# grapple_tournament_bot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  init_database.sh  sqlx-data.json
.sqlx/: query-2921c742c50de3fa62186065cc382219c34a6d092dfc555f557f7a6d7045fafa.json  query-e7734974f939c2306b7ffc6c105c190e1554f9b5bb024419e5531c00129b45fb.json
migrations/: 2_players.sql  3_insert_regions.sql
src/: api.rs  main.rs  recurring.rs  request_recurring.rs
src/commands/: mod.rs  players.rs  plot.rs
