[package]
name = "gt_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "offline",
] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "full"] }
dotenvy = "0.15.6"
poise = "0.4.1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.147"
strum = "0.24"
strum_macros = "0.24"
miette = "5.4.1"
thiserror = "1.0.37"
