[package]
name = "gt_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "full"] }
dotenvy = "0.15.6"
poise = "0.5.5"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = "1.0.147"
strum = "0.25"
strum_macros = "0.25"
plotters = { version = "0.3.5", features = ["datetime"] }
chrono = "0.4.30"
color-eyre = "0.6.2"
itertools = "0.11.0"
image = "0.24.7"
tabled = "0.14.0"

[features]
prepare = []
